--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -13,6 +13,18 @@
     path: "{{ aerospike_config_path }}"
     state: directory
 
+- name: Copy Aerospike configuration
+  template:
+    src: aerospike.j2
+    dest: "{{ aerospike_config_path }}/aerospike.template.conf"
+    owner: root
+    group: root
+    mode: 0644
+#  when: >
+#    (ansible_os_family == 'RedHat' and ansible_distribution_major_version|int < 7) or
+#    (ansible_os_family == 'Debian' and ansible_distribution_release != "xenial")
+#  notify: restart aerospike
+
 - name: Ensure aerospike services are started and enabled on startup.
   service:
     name: "{{ item }}"
